--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,19 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: ["electus"]
   pull_request:
-    branches: [master]
+    branches: ["electus"]
 
 jobs:
   CI:
     runs-on: ubuntu-latest
-    container: heliumsystems/builder-erlang:1
+    container:
+      image: erlang:22.0.7
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Cache Dialyzer PLTs
         uses: actions/cache@v1
